[package]
name = "adriann"
version = "0.0.1"
edition = "2021"
description = "Adriann is a Rust library implementing SPANN, a high-scale hybrid nearest-neighbor algorithm."
license = "Apache 2"

repository = "https::/github.com/adriacabeza/adriaANN"
readme = "README.md"

keywords = ["nearest-neighbors", "spann", "adriANN", "high-scale"]
categories = ["algorithms", "science", "development-tools"]


[dependencies]
ndarray = { version="0.16", features=["serde"]}
ndarray-rand = "0.15"
rand = "0.8"
colored = "2.2"
log = "0.4"
env_logger = "0.11"
num-traits = "0.2" 
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
flate2 = "1.0.35"
bincode = "1.3.3"
kiddo = {version="5.0.3",  features = ["serde"]}
rand_distr = "0.4.3"
ndarray-stats = "0.6"

[dev-dependencies]
criterion = {version = "0.5", features = ["html_reports"]}

[[bench]]
name = "clustering_benchmark"
harness = false
