[package]
name = "adriann"
version = "0.0.1"
edition = "2021"
description = "Adriann is a Rust library implementing SPANN, a high-scale hybrid nearest-neighbor algorithm."
license = "Apache-2.0"

repository = "https://github.com/adriacabeza/adriANN"
readme = "README.md"

keywords = ["nearest-neighbors", "spann", "adriANN", "search", "high-scale"]
categories = ["algorithms", "science", "development-tools"]

[profile.dev]
codegen-units = 4
debug-assertions = true
incremental = true
lto = false
opt-level = 0

[profile.release]
codegen-units = 1
lto = "fat"
strip = true
incremental = false
debug-assertions = false
opt-level = 3

[dependencies]
ndarray = { version="0.16.1", features=["serde"]}
rand = { version = "0.9.0", features = ["small_rng"] }
log = "0.4"
num-traits = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
flate2 = "1.0.35"
bincode = "1.3.3"
kiddo = { version = "5.0.3", features = ["serde"] }
rand_distr = "0.5.0"
ndarray-stats = "0.6"
fxhash = "0.2.1"
rayon = "1.10.0"

[dev-dependencies]
criterion = {version = "0.5", features = ["html_reports"]}

[[bench]]
name = "clustering_benchmark"
harness = false
